hphp/hack/test/typecheck/default_with_type_error.php.exp
File "default_with_type_error.php", line 10, characters 9-10:
Typing error (Typing[4429])
  File "default_with_type_error.php", line 10, characters 9-14:
  Expected `num` because this is used in an arithmetic operation
  File "default_with_type_error.php", line 7, characters 14-19:
  But got `string`
